--- a/CSS/main.css
+++ b/CSS/main.css
@@ -651,6 +651,252 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
 .contenedor_btn_pulse .btn_pulse:hover {
   color: #F76304;
   animation: pulsate 1s ease-in-out;
+  border: 3px solid #F76304;
+}
+
+.section_servicios {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  margin-top: 4em;
+  margin-bottom: 2em;
+}
+.section_servicios hr {
+  color: #E0E0E0;
+  width: 60%;
+  transition: all 0.35 ease-in-out;
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+.section_servicios h2 {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  width: 100%;
+  text-align: center;
+  color: #57A9DA;
+  font-family: "Fugaz One", cursive;
+}
+.section_servicios .servicio_principal_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+.section_servicios .servicio_principal_container .containerStar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+}
+.section_servicios .servicio_principal_container .containerStar .servicioPrincipal_title {
+  color: #F76304;
+  text-align: center;
+  margin: 1em;
+}
+.section_servicios .servicio_principal_container .containerStar .servicioPrincipal_star {
+  width: 50px;
+  height: 50px;
+  animation: girar 5s infinite linear;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+.section_servicios .servicio_principal_container .containerStar .stars_icon {
+  font-size: 40px;
+  width: 40px;
+  height: 40px;
+  color: #E0E0E0;
+  animation: girar 5s infinite linear;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+  text-shadow: 0 0 30px #57A9DA;
+}
+.section_servicios .servicio_principal_container .caminoDigital_Title {
+  color: #57A9DA;
+  width: 100%;
+  text-align: center;
+  font-family: "Fugaz One", cursive;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_servicios .servicio_principal_container .caminoDigital_paragraph {
+  text-align: left;
+  width: 60%;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+.section_servicios .servicio_principal_container .impulsos_container {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_servicios .servicio_principal_container .impulsos_container .impulsos_content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  overflow: hidden;
+  position: relative;
+  min-width: 300px;
+}
+.section_servicios .servicio_principal_container .impulsos_container .impulsos_content p {
+  text-align: left;
+  color: #E0E0E0;
+  font-family: "Fugaz One", cursive;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_servicios .servicio_principal_container .caminoDigital_pie {
+  width: 60%;
+  color: #F76304;
+  text-align: left;
+  font-family: "Fugaz One", cursive;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_servicios .cardsImpulsos_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 100%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+.section_servicios .container_content_impulso {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 25%;
+  min-width: 22rem;
+  max-width: 20rem;
+  height: 100%;
+  min-height: 38rem;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  box-shadow: rgba(87, 169, 218, 0.884) 3px 4px 17px;
+  border-radius: 15pt;
+}
+.section_servicios .container_content_impulso .contenedor_impulso_img {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  max-width: 10rem;
+  max-height: 10rem;
+  overflow: hidden;
+}
+.section_servicios .container_content_impulso .contenedor_impulso_img .img_impulso {
+  width: 100%;
+  height: 100%;
+  transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+}
+.section_servicios .container_content_impulso .contenedor_impulso_img .img_impulso:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+}
+.section_servicios .container_content_impulso .contenedor_btns {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+.section_servicios .container_content_impulso .container_impulso_speach {
+  width: 90%;
+  height: 100%;
+  min-height: 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.section_servicios .container_content_impulso .container_impulso_speach .impulso_title {
+  text-align: center;
+  font-family: "Fugaz One", cursive;
+  color: #57A9DA;
+  width: 100%;
+}
+.section_servicios .container_content_impulso .container_impulso_speach .impulso_paragraph {
+  width: 100%;
+  text-align: left;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-weight: bold;
+  width: 85%;
+}
+.section_servicios .container_content_impulso .btn_impulsos {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+.section_servicios .container_content_impulso .btn_impulsos a {
+  min-width: 200px;
+  min-height: 50px;
+  text-align: center;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+.section_servicios .carousel_title {
+  color: #F76304;
+  font-family: "Fugaz One", cursive;
+  width: 60%;
+  text-align: left;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+.section_servicios .asesorate {
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.section_servicios .asesorate .asesorate_btn {
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 15px 20px;
+  border: 3px solid #E0E0E0;
+  border-radius: 10px;
+}
+.section_servicios .asesorate .asesorate_btn:hover {
+  color: #F76304;
+  animation: pulsate 1s ease-in-out;
 }
 
 .section_nosotros {
@@ -829,199 +1075,6 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   font-family: "Fugaz One", cursive;
   margin-top: 1em;
   margin-bottom: 1em;
-}
-
-.section_servicios {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  flex-direction: column;
-  margin-top: 4em;
-  margin-bottom: 2em;
-}
-.section_servicios hr {
-  color: #E0E0E0;
-  width: 60%;
-  transition: all 0.35 ease-in-out;
-  margin-top: 3em;
-  margin-bottom: 3em;
-}
-.section_servicios h2 {
-  margin-top: 2em;
-  margin-bottom: 1em;
-  width: 100%;
-  text-align: center;
-  color: #57A9DA;
-  font-family: "Fugaz One", cursive;
-}
-.section_servicios .servicio_principal_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.section_servicios .servicio_principal_container .containerStar {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  width: 65%;
-}
-.section_servicios .servicio_principal_container .containerStar .servicioPrincipal_title {
-  color: #F76304;
-  text-align: center;
-  margin: 1em;
-}
-.section_servicios .servicio_principal_container .containerStar .servicioPrincipal_star {
-  width: 50px;
-  height: 50px;
-  animation: girar 5s infinite linear;
-  transform-style: preserve-3d;
-  perspective: 1000px;
-}
-.section_servicios .servicio_principal_container .caminoDigital_Title {
-  color: #57A9DA;
-  width: 100%;
-  text-align: center;
-  font-family: "Fugaz One", cursive;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .servicio_principal_container .caminoDigital_paragraph {
-  text-align: left;
-  width: 60%;
-  color: #E0E0E0;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
-.section_servicios .servicio_principal_container .impulsos_container {
-  width: 80%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .servicio_principal_container .impulsos_container .impulsos_content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1em;
-  overflow: hidden;
-  position: relative;
-  min-width: 300px;
-}
-.section_servicios .servicio_principal_container .impulsos_container .impulsos_content p {
-  text-align: left;
-  color: #E0E0E0;
-  font-family: "Fugaz One", cursive;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .servicio_principal_container .caminoDigital_pie {
-  width: 60%;
-  color: #F76304;
-  text-align: left;
-  font-family: "Fugaz One", cursive;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .container_content_impulso {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 60%;
-  height: 30%;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .container_content_impulso .contenedor_impulso_img {
-  width: 30%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  max-width: 10rem;
-  max-height: 10rem;
-  overflow: hidden;
-}
-.section_servicios .container_content_impulso .contenedor_impulso_img .img_impulso {
-  width: 100%;
-  height: 100%;
-  /*                 -moz-transition: all 500ms ease;
-                  -webkit-transition: all 500ms ease;
-                  -o-transition: all 500ms ease; */
-  transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -webkit-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-}
-.section_servicios .container_content_impulso .contenedor_impulso_img .img_impulso:hover {
-  /*                     -webkit-transform: scale(1.2);
-                      -o-transform: scale(1.2);
-                      -moz-transform: scale(1.2); */
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -o-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-}
-.section_servicios .container_content_impulso .container_impulso_speach {
-  width: 70%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.section_servicios .container_content_impulso .container_impulso_speach .impulso_title {
-  text-align: left;
-  font-family: "Fugaz One", cursive;
-  color: #F76304;
-  width: 100%;
-}
-.section_servicios .container_content_impulso .container_impulso_speach .impulso_paragraph {
-  width: 100%;
-  text-align: left;
-  color: #E0E0E0;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .carousel_title {
-  color: #F76304;
-  font-family: "Fugaz One", cursive;
-  width: 60%;
-  text-align: left;
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-.section_servicios .asesorate {
-  display: flex;
-  width: 80%;
-  justify-content: flex-end;
-  align-items: center;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.section_servicios .asesorate .asesorate_btn {
-  color: #E0E0E0;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 15px 20px;
-  border: 3px solid #E0E0E0;
-  border-radius: 10px;
-}
-.section_servicios .asesorate .asesorate_btn:hover {
-  color: #F76304;
-  animation: pulsate 1s ease-in-out;
 }
 
 .section_contacto {
@@ -1398,6 +1451,15 @@ footer .footer__copyright {
     width: 40%;
     margin: 1em;
   }
+
+  .section_servicios .cardsImpulsos_container {
+    flex-wrap: wrap;
+  }
+  .section_servicios .container_content_impulso {
+    margin-right: 2em;
+    margin-left: 2em;
+    width: 30%;
+  }
 }
 @media screen and (max-width: 998px) {
   header .contenedor_logo_header {
@@ -1540,9 +1602,9 @@ header .center div {
   .section_servicios .container_content_impulso {
     flex-direction: column;
     width: 100%;
-  }
-  .section_servicios .container_content_impulso .container_impulso_speach .impulso_paragraph {
-    text-align: left;
+    min-width: 16rem;
+    margin-top: 1em;
+    margin-bottom: 2em;
   }
   .section_servicios .servicio_principal_container .caminoDigital_paragraph {
     width: 90%;
@@ -1617,6 +1679,9 @@ header .center div {
 
   .section_servicios .servicio_principal_container .containerStar {
     flex-direction: column;
+  }
+  .section_servicios .servicio_principal_container .containerStar .servicioPrincipal_title {
+    width: 90%;
   }
   .section_servicios .servicio_principal_container .impulsos_container {
     flex-direction: column;
