--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -181,10 +181,15 @@ header{
     h2{
         @include h2;
     }
+    .particles-js-canvas-el{
+        position: absolute
+    }
     .servicio_principal_container{
         @include flex__ColumnCenterAll;
         width: 100%;
         @include margin__Espaciado(2em,2em);
+        position: relative;
+        background-color: $color_gris_oscuro;
         .containerStar{
             display: flex;
             flex-direction: row;
@@ -192,7 +197,7 @@ header{
             justify-content: center;
             width: 60%;
             .servicioPrincipal_title{
-                color: $color_naranja_cohete;
+                color: $color_gris_claro;
                 text-align: center;
                 margin: 1em;
             }
@@ -351,10 +356,10 @@ header{
         text-align: left;
         @include margin__Espaciado(2em,2em);
     }
-    .asesorate{
+    .asesorate_container{
         display: flex;
         width: 80%;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: center;
         @include margin__Espaciado(1em,1em);
         .asesorate_btn{
@@ -368,6 +373,7 @@ header{
             &:hover{
                 color: $color_naranja_cohete;
                 animation: pulsate 1s ease-in-out;
+                border: 3px solid $color_naranja_cohete
             };
         }
 
