--- a/SCSS/_borderEfect.scss
+++ b/SCSS/_borderEfect.scss
@@ -66,3 +66,19 @@
         transform: translateY(-100%);
     }
 }
+.valores_content, .beneficio_content{
+    &:hover{
+        span:nth-child(1){
+            background: linear-gradient(to right, transparent, $color_naranja_cohete);
+        };
+        span:nth-child(2){
+            background: linear-gradient(to bottom, transparent, $color_naranja_cohete);
+        };
+        span:nth-child(3){
+            background: linear-gradient(to left, transparent, $color_naranja_cohete); 
+        };
+        span:nth-child(4){
+            background: linear-gradient(to top, transparent, $color_naranja_cohete);
+        };
+    }
+}
