--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -180,6 +180,7 @@ header{
     }
     h2{
         @include h2;
+        @include camuflaje;
     }
     .particles-js-canvas-el{
         position: absolute
@@ -350,11 +351,12 @@ header{
         }
     }
     .carousel_title{
-        color: $color_naranja_cohete;
+        color: $color_celeste_oscuro;
         font-family: $letra__principal;
-        width: 60%;
-        text-align: left;
+        width: 90%;
+        text-align: center;
         @include margin__Espaciado(2em,2em);
+        @include camuflaje;
     }
     .asesorate_container{
         display: flex;
@@ -378,6 +380,81 @@ header{
         }
 
     }
+    .caminoDigital_container{
+        @include flex__ColumnCenterAll;
+        .container_content_caminoDigital{
+            @include flex__ColumnCenterAll;
+            width: 35%;
+            min-width: 25rem;
+            max-width: 25rem;
+            height: 100%;
+            min-height: 30rem;
+            @include margin__Espaciado(1em,1em);
+            box-shadow: rgba(87, 169, 218, 0.884) 3px 4px 17px;
+            border-radius: 15pt;
+            transition: all 1s ease-in-out;
+            &:hover{
+                box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+                .caminoDigital_container_speach{
+                    .caminoDigital_title{
+                        color: $color_naranja_cohete;
+                    }
+                };  
+            }
+            .caminoDigital_container_img{
+                width: 8rem;
+                height: 8rem;
+                @include flex__Center;
+                max-width: 10rem;
+                max-height: 10rem;
+                overflow: hidden;
+                .caminoDigital_img{
+                    width: 100%;
+                    height: 100%;
+                    transition: all 500ms ease;
+                    @include compatibilidad_transition(all 500ms ease);
+                    &:hover{
+                        transform: scale(1.2);
+                        @include compatibilidad_transform(scale(1.2));
+                    }
+                } 
+            }
+            .caminoDigital_container_btns{
+                width: 100%;
+                @include flex__ColumnCenterAll;
+                @include margin__Espaciado(1em,2em);
+            }   
+            .caminoDigital_container_speach{
+                width: 90%;
+                height: 100%;
+                min-height: 10rem;
+                @include flex__ColumnCenterAll;
+                .caminoDigital_title{
+                    text-align: center;
+                    font-family: $letra__principal;
+                    color: $color_celeste_oscuro;
+                    width: 100%;
+                    transition: all 1s ease-in-out;
+                }
+                .caminoDigital_paragraph{
+                    @include p;
+                    font-weight: bold;
+                    width: 85%;
+                }
+            }
+            .btn_caminoDigital{
+                @include margin__Espaciado(1em,1em);
+                @include flex__Center;
+                a{
+                    min-width: 200px;
+                    min-height: 50px;
+                    text-align: center;
+                    padding: 10px 15px;
+                    @include flex__Center;
+                }
+            }
+        }
+    }
 }
 .section_nosotros{
     @include secciones;
@@ -394,13 +471,16 @@ header{
             @include margin__Espaciado(1em,1em);
             h2{
                 @include h2;
+                @include camuflaje;
             }
             p{
                 @include p;
+                text-align: justify;
             }
             span{
                 color: $color_celeste_oscuro;
                 font-family: $letra__principal;
+                @include camuflaje;
             }
         }
         .contenedor_nosotros_Speach{
@@ -413,12 +493,18 @@ header{
         @include margin__Espaciado(1em,1em);
         h3{
             text-align: center;
-            color: $color_naranja_cohete;
+            color: $color_celeste_oscuro;
             font-family: $letra__principal;
+            @include camuflaje;
         }
         .nosotros_valores_paragraph{
             @include p;
             width: 60%;
+        }
+        span{
+            color: $color_celeste_oscuro;
+            font-family: $letra__principal;
+            @include camuflaje;
         }
     }
     .nosotros_valores_container{
@@ -430,6 +516,7 @@ header{
             justify-content: space-around;
             align-items: center;
             flex-direction: row;
+            transition: all 1s ease-in-out;
             .valores_content{
                 display: flex;
                 justify-content: center;
@@ -439,6 +526,7 @@ header{
                 //width: 100px;
                 //height: 50px;
                 position: relative;
+                transition: all 1s ease-in-out;
                 p{
                     text-align: center;
                     color: $color_gris_claro;
@@ -459,12 +547,19 @@ header{
             @include margin__Espaciado(2em,1em);
             width: 100%;
             text-align: center;
-            color: $color_naranja_cohete;
+            color: $color_celeste_oscuro;
             font-family: $letra__principal;
+            @include camuflaje;
         }
         .nosotros_mision_paragraph{
             @include p;
-            width: 60%;
+            width: 67%;
+            text-align: justify;
+            span{
+                color: $color_celeste_oscuro;
+                font-family: $letra__principal;
+                @include camuflaje;
+            }
         }
         .nosotros_mision_hashtag_container{
             width: 100%;
@@ -481,8 +576,10 @@ header{
                 color: $color_gris_claro;
                 text-align: left;
                 margin: 1em;
+                @include camuflaje;
                 span{
-                    font-family: $letra__secundaria
+                    font-family: $letra__secundaria;
+                    @include camuflaje;
                 }
             }
         }
@@ -520,6 +617,7 @@ header{
     }
     h2{
         @include h2;
+        @include camuflaje;
     }
     .contacto_redes_container{
         @include margin__Espaciado(1em,1em);
@@ -547,6 +645,8 @@ header{
                 text-align: center;
                 text-decoration: none;
                 color: $color_gris_claro;
+                box-shadow: $color_gris_oscuro 2px 2px 5px;
+                border-radius: 50%;
                 &:hover{
                     color: $color_naranja_cohete;
                     border-radius: 50%;
@@ -577,6 +677,8 @@ header{
         transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
         @include compatibilidad_transition(2.5s cubic-bezier(0.4, 0.2, 0.2, 1));
         @include margin__Espaciado(1em,1em);
+        transition: all 1s ease-in-out;
+
     }
     .formulario_contenedor_datos{
         display: flex;
@@ -584,17 +686,19 @@ header{
         justify-content: space-between;
         width: 50%;
         h3{
-            color: $color_naranja_cohete;
-            font-family: $letra__principal ;
+            color: $color_gris_claro;
+            font-family: $letra__principal;
+            transition: all 1s ease-in-out;
         }
         .contenedor_inputs{
             display: flex;
             flex-direction: column;
             width: 100%;
             max-width: 350px;
-            color: $color_naranja_cohete;
+            color: $color_gris_claro;
             font-family: $letra__secundaria;
             font-weight: bold;
+            transition: all 1s ease-in-out;
         }
         .section__formulario__contenedor__form-input{
             padding: 5px;
@@ -616,10 +720,11 @@ header{
         justify-content: space-between;
         width: 50%;
         h3{
-            color: $color_naranja_cohete;
+            color: $color_celeste_oscuro;
             font-family: $letra__principal;
             width: 100%;
             @include margin__Espaciado(1em,1em);
+            transition: all 1s ease-in-out;
         }
         .contenedor_inputs{
             display: flex;
@@ -629,6 +734,7 @@ header{
             color: $color_gris_claro;
             font-family: $letra__secundaria;
             font-weight: bold;
+            transition: all 1s ease-in-out;
         }
         .contenedor_btn_formulario{
             display: flex;
@@ -650,10 +756,29 @@ header{
                 &:hover{
                     color: $color_naranja_cohete;
                     animation: pulsate 1s ease-in-out;
+                    border: 3px solid $color_naranja_cohete;
                 };
             }
         }
-
+    }
+    .contacto_formulario{
+        transition: all 1s ease-in-out;
+        &:hover{
+            box-shadow: 3px 4px 17px rgba(236, 129, 29, 0.89);
+            .formulario_contenedor_datos{
+                h3{
+                    color: $color_naranja_cohete;
+                }
+            };
+            .contenedor_inputs{
+                color: $color_naranja_cohete;
+            }
+            .formulario_contenedor_textarea{
+                h3{
+                    color: $color_naranja_cohete
+                }
+            }
+        }
     }
     .contacto_redesUbicacion{
         @include margin__Espaciado(1em,1em);
@@ -674,6 +799,7 @@ header{
                 @include margin__Espaciado(1em,1em);
                 color: $color_celeste_oscuro;
                 font-family: $letra__principal;
+                @include camuflaje;
             }
             .contacto_redes{
                 display: flex;
@@ -733,11 +859,12 @@ header{
         @include margin__Espaciado(1em,1em);
         flex-direction: column;
         .contacto_calendly_title{
-            color: $color_naranja_cohete;
+            color: $color_celeste_oscuro;
             width: 60%;
-            text-align: left;
+            text-align: center;
             font-family: $letra__principal;
             @include margin__Espaciado(2em,1em);
+            @include camuflaje;
         }
         .calendly{
             width: 60%;
